@@ -1,25 +1,26 @@
 /* Declarations and definitions of codes relating to the DWARF symbolic
    debugging information format.
 
-   Written by Ron Guilmette (rfg@ncd.com)
+   Written by Ron Guilmette (rfg@netcom.com)
 
-Copyright 1992, 1993, 1995, 1999 Free Software Foundation, Inc.
+Copyright 1992, 1993, 1995, 1999, 2005 Free Software Foundation, Inc.
 
-This file is part of GNU CC.
+This file is part of GCC.
 
-GNU CC is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2, or (at your option)
-any later version.
+GCC is free software; you can redistribute it and/or modify it under
+the terms of the GNU General Public License as published by the Free
+Software Foundation; either version 2, or (at your option) any later
+version.
 
-GNU CC is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
+GCC is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or
+FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+for more details.
 
 You should have received a copy of the GNU General Public License
-along with GNU CC; see the file COPYING.  If not, write to
-the Free Software Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
+along with GCC; see the file COPYING.  If not, write to the Free
+Software Foundation, 59 Temple Place - Suite 330, Boston, MA
+02111-1307, USA.  */
 
 /* This file is derived from the DWARF specification (a public document)
    Revision 1.0.1 (April 8, 1992) developed by the UNIX International
@@ -170,8 +171,8 @@ enum dwarf_attribute {
     AT_body_end			= (0x8050|FORM_ADDR)
 };
 
-#define AT_lo_user	0x8000  /* implementation-defined range start */
-#define AT_hi_user	0xffff  /* implementation-defined range end */
+#define AT_lo_user	0x2000	/* implementation-defined range start */
+#define AT_hi_user	0x3ff0	/* implementation-defined range end */
 
 /* Location atom names and codes.  */
 
@@ -182,7 +183,11 @@ enum dwarf_location_atom {
     OP_CONST	= 0x04,
     OP_DEREF2	= 0x05,
     OP_DEREF4	= 0x06,
-    OP_ADD	= 0x07
+    OP_ADD	= 0x07,
+
+    /* GNU extensions.  */
+
+    OP_MULT	= 0x80
 };
 
 #define OP_LO_USER	0x80  /* implementation-defined range start */
@@ -217,7 +222,7 @@ enum dwarf_fundamental_type {
   
     /* GNU extensions
        The low order byte must indicate the size (in bytes) for the type.
-       All of these types will probably break "classic" svr4 SDB */
+       All of these types will probably break "classic" svr4 SDB.  */
 
     FT_long_long	= 0x8008,
     FT_signed_long_long	= 0x8108,
@@ -235,6 +240,9 @@ enum dwarf_fundamental_type {
     FT_int64		= 0x9908,
     FT_signed_int64	= 0x9a08,
     FT_unsigned_int64	= 0x9b08,
+    FT_int128		= 0x9c10,
+    FT_signed_int128	= 0x9d10,
+    FT_unsigned_int128	= 0x9e10,
 
     FT_real32		= 0xa004,
     FT_real64		= 0xa108,
@@ -280,10 +288,10 @@ enum dwarf_subscr_data_formats {
 
 /* Derived from above for ease of use.  */
 
-#define FMT_CODE(_FUNDAMENTAL_TYPE_P, _UB_CONST_P, _LB_CONST_P) \
+#define FMT_CODE(_FUNDAMENTAL_TYPE_P, _LB_CONST_P, _UB_CONST_P) \
  (((_FUNDAMENTAL_TYPE_P) ? 0 : 4)	\
-  | ((_UB_CONST_P) ? 0 : 2)		\
-  | ((_LB_CONST_P) ? 0 : 1))
+  | ((_LB_CONST_P) ? 0 : 2)		\
+  | ((_UB_CONST_P) ? 0 : 1))
 
 /* Source language names and codes.  */
 
@@ -298,11 +306,7 @@ enum dwarf_source_language {
     LANG_FORTRAN90	= 0x00000008,
     LANG_PASCAL83	= 0x00000009,
     LANG_MODULA2	= 0x0000000a,
-
-    /* GNU extensions */
-
-    LANG_CHILL		= 0x00009af3,	/* random value for GNU Chill */
-    LANG_JAVA		= 0x00009af4    /* random value + 1 for GNU Java */
+    LANG_JAVA		= 0x0000000b
 };
 
 #define LANG_lo_user	0x00008000  /* implementation-defined range start */
